--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
     position: relative;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
+
 html{
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-family: gabriola;
+    font-family:  'Gabriela', serif;
 }
 
 body{
@@ -28,7 +30,7 @@ div.elpis-logo-container{
     display: flex;
     border-radius: 20%;
     color: darkslategray;
-    font-family: ElpisLogoFont;
+    font-family:  'Gabriela', serif;
 }
 
 div.elpis-logo{
@@ -42,7 +44,7 @@ div.elpis-logo{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: french script mt;
+    font-family:  'Gabriela', serif;
 }
 
 div.elpis-logo-rotator{
