--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html{
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-family:  'Gabriela', serif;
+    font-family: url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');;
 }
 
 body{
@@ -30,7 +30,7 @@ div.elpis-logo-container{
     display: flex;
     border-radius: 20%;
     color: darkslategray;
-    font-family:  'Gabriela', serif;
+    font-family: url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
 }
 
 div.elpis-logo{
@@ -44,7 +44,7 @@ div.elpis-logo{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family:  'Gabriela', serif;
+    font-family: url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
 }
 
 div.elpis-logo-rotator{
