--- a/style.css
+++ b/style.css
@@ -5,13 +5,26 @@
     position: relative;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
+@font-face{
 
+  font-family: ElpisFont;
+
+  src: url(sansation_light.woff);
+
+}
+
+@font-face {
+
+  font-family: ElpisLogo;
+
+  src: url(sansation_light.woff);
+
+}
 html{
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-family: url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+    font-family: ElpisFont;
 }
 
 body{
@@ -30,7 +43,7 @@ div.elpis-logo-container{
     display: flex;
     border-radius: 20%;
     color: darkslategray;
-    font-family: url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+    font-family: ElpisLogo;
 }
 
 div.elpis-logo{
@@ -44,7 +57,7 @@ div.elpis-logo{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
+    font-family: ElpisLogo;
 }
 
 div.elpis-logo-rotator{
