--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
   font-family: ElpisFont;
 
-  src: url(sansation_light.woff);
+  src: url(GABRIOLA.TTF);
 
 }
 
@@ -17,7 +17,7 @@
 
   font-family: ElpisLogo;
 
-  src: url(sansation_light.woff);
+  src: url(FRSCRIPT.TTF);
 
 }
 html{
@@ -408,7 +408,7 @@ div.home-intro{
     align-items: center;
     justify-items: center;
     padding: 5vw;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: ElpisFont:
     font-size: 1.3rem;
 }
 
@@ -1247,7 +1247,7 @@ div.base-footer{
         border-top: 1px solid black;
         text-align: center;
         font-size: 1rem;
-        font-family: gabriola;
+        font-family: ElpisFont;
     }
 
     div.my-works-content{
