--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@
 
 }
 
+@font-face{
+
+  font-family: agenX;
+
+  src: url(agency.TTF);
+
+}
+
 @font-face {
 
   font-family: ElpisLogo;
@@ -976,13 +984,12 @@ footer{
     display: flex;
     flex-direction: column;
     width: 100%;
-    font-family: agency FB;
+    font-family: agenX;
     min-height: 17rem;
 }
 
 footer > div.main-footer-text{
     font-size: 3.5rem;
-    font-family: Agency FB;
     width: 100%;
     display: flex;
     align-items: center;
